--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,50 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+
+.input-box {
+  padding: 6px;
+  height: 40px;
+  width: 500px;
+  color: white;
+  font-size: 20px;
+  border-radius: 20px;
+
+  background-color: orange;
+}
+
+
+.input-box-area {
+  padding: 6px;
+  height: 80px;
+  width: 500px;
+  color: white;
+  font-size: 20px;
+  border-radius: 20px;
+
+  background-color: orange;
+}
+
+.form-container {
+  border-radius: 40px;
+  color: #000;
+  height: 680px;
+  background-color: white;
+  width: 600px;
+  z-index: 1;
+}
+
+.swap-button {
+  height: 50px;
+  width: 100px;
+  font-size: 20px;
+  color: white;
+  background-color: orange;
+  border-radius: 20px;
 }
